# libutils

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cppcheck.cmake  doxygen.cmake  libutils.cmake  suppressions.xml  tests.cmake  uncrustify.cfg
.github/workflows/: cd.yml  ci.yml  deploy_docs.yml  production_ci.yml  release_ci.yml
LinkedList/: CMakeLists.txt  suppressions.xml
LinkedList/include/: DoublyLinkedList.h  SinglyLinkedList.h
LinkedList/src/: DoublyLinkedList.c  SinglyLinkedList.c
LinkedList/test/: test_DoublyLinkedList.c  test_SinglyLinkedList.c
LinkedList/tests/: tests_DoublyLinkedList.c  tests_LinkedList.c  tests_SinglyLinkedList.c
Queue/: CMakeLists.txt  Doxyfile  suppressions.xml
Queue/include/: Queue.h
Queue/src/: Queue.c
Queue/test/: test_Queue.c
Queue/tests/: tests_Queue.c
Stack/: CMakeLists.txt
Stack/include/: Stack.h
Stack/src/: Stack.c
Stack/test/: test_Stack.c
include/: BinarySearchTree.h  DoublyLinkedList.h  Queue.h  SinglyLinkedList.h  Stack.h  Version.h
src/: BinarySearchTree.c  DoublyLinkedList.c  Queue.c  SinglyLinkedList.c  Stack.c
test/: test_BinarySearchTree.c  test_DoublyLinkedList.c  test_Queue.c  test_SinglyLinkedList.c  test_Stack.c
tools/docker/: Dockerfile  docker-compose.yml
